# ecommerce-py

./: Makefile  escp.db  pyproject.toml
escp/: __init__.py
escp/backend/: app.py
escp/backend/templates/: index.html
escp/crons/: syncFromDB.py
escp/migrations/: __main__.py  product_migrate.py
escp/models/: Product.py
escp/utils/: db.py  errors.py
